ghc-4335c07/testsuite/tests/typecheck/should_fail/T2846b.hs
{-# LANGUAGE ImpredicativeTypes, FlexibleContexts #-}
module T2846 where

f :: String
f = show ([1,2,3] :: [Num a => a])

