ghc-4335c07/testsuite/tests/typecheck/should_fail/T2846b.stderr

T2846b.hs:5:5: error:
    • No instance for (Show (Num a0 => a0))
        arising from a use of ‘show’
        (maybe you haven't applied a function to enough arguments?)
    • In the expression: show ([1, 2, 3] :: [Num a => a])
      In an equation for ‘f’: f = show ([1, 2, 3] :: [Num a => a])
